Starts create user functionality
